Add a Copy Button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+          <button style = "background-color:black" id = "copy" class = "btn">Copy text</button>
+          <div id="copyNote"></div>
         </div>
       </div>
     </div>
